// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kube-object-menu given kube object renders 1`] = `
<body>
  <div>
    <div>
      <ul
        class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
        data-testid="menu-actions-for-kube-object-menu-for-some-uid"
        id="menu-actions-for-kube-object-menu-for-some-uid"
      >
        <li>
          Some menu item
        </li>
        <li
          class="MenuItem"
          data-testid="menu-action-delete-for-/foo"
          tabindex="0"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="delete"
            >
              delete
            </span>
          </i>
          <div>
            Delete
          </div>
          <span
            class="title"
          >
            Delete
          </span>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`kube-object-menu given kube object when removing kube object renders 1`] = `
<body>
  <div>
    <div>
      <ul
        class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
        data-testid="menu-actions-for-kube-object-menu-for-some-uid"
        id="menu-actions-for-kube-object-menu-for-some-uid"
      >
        <li>
          Some menu item
        </li>
        <li
          class="MenuItem"
          data-testid="menu-action-delete-for-/foo"
          tabindex="0"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="delete"
            >
              delete
            </span>
          </i>
          <div>
            Delete
          </div>
          <span
            class="title"
          >
            Delete
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="Dialog flex center ConfirmDialog modal"
    data-testid="confirmation-dialog"
  >
    <div
      class="box"
    >
      <div
        class="confirm-content"
      >
        <i
          class="Icon material focusable big"
        >
          <span
            class="icon"
            data-icon-name="warning"
          >
            warning
          </span>
        </i>
         
        <p>
          Remove some-kind 
          <b>
            some-namespace/some-name
          </b>
           from 
          <b>
            some-context-name
          </b>
          ?
        </p>
      </div>
      <div
        class="confirm-buttons"
      >
        <button
          class="Button cancel plain"
          type="button"
        >
          Cancel
        </button>
        <button
          class="Button ok primary"
          data-testid="confirm"
          data-waiting="false"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube-object-menu given kube object when rerendered with different kube object renders 1`] = `
<body>
  <div>
    <div>
      <ul
        class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
        data-testid="menu-actions-for-kube-object-menu-for-some-other-uid"
        id="menu-actions-for-kube-object-menu-for-some-other-uid"
      >
        <li
          class="MenuItem"
          data-testid="menu-action-delete-for-/some-other-api-version/some-other-kind/some-other-namespace/some-other-name"
          tabindex="0"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="delete"
            >
              delete
            </span>
          </i>
          <div>
            Delete
          </div>
          <span
            class="title"
          >
            Delete
          </span>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`kube-object-menu given kube object when rerendered with different kube object when removing new kube object renders 1`] = `
<body>
  <div>
    <div>
      <ul
        class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
        data-testid="menu-actions-for-kube-object-menu-for-some-other-uid"
        id="menu-actions-for-kube-object-menu-for-some-other-uid"
      >
        <li
          class="MenuItem"
          data-testid="menu-action-delete-for-/some-other-api-version/some-other-kind/some-other-namespace/some-other-name"
          tabindex="0"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="delete"
            >
              delete
            </span>
          </i>
          <div>
            Delete
          </div>
          <span
            class="title"
          >
            Delete
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="Dialog flex center ConfirmDialog modal"
    data-testid="confirmation-dialog"
  >
    <div
      class="box"
    >
      <div
        class="confirm-content"
      >
        <i
          class="Icon material focusable big"
        >
          <span
            class="icon"
            data-icon-name="warning"
          >
            warning
          </span>
        </i>
         
        <p>
          Remove some-other-kind 
          <b>
            some-other-namespace/some-other-name
          </b>
           from 
          <b>
            some-context-name
          </b>
          ?
        </p>
      </div>
      <div
        class="confirm-buttons"
      >
        <button
          class="Button cancel plain"
          type="button"
        >
          Cancel
        </button>
        <button
          class="Button ok primary"
          data-testid="confirm"
          data-waiting="false"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube-object-menu given kube object with namespace when removing kube object, renders confirmation dialog with namespace 1`] = `
<body>
  <div>
    <div>
      <ul
        class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
        data-testid="menu-actions-for-kube-object-menu-for-some-uid"
        id="menu-actions-for-kube-object-menu-for-some-uid"
      >
        <li>
          Some menu item
        </li>
        <li
          class="MenuItem"
          data-testid="menu-action-delete-for-/foo"
          tabindex="0"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="delete"
            >
              delete
            </span>
          </i>
          <div>
            Delete
          </div>
          <span
            class="title"
          >
            Delete
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="Dialog flex center ConfirmDialog modal"
    data-testid="confirmation-dialog"
  >
    <div
      class="box"
    >
      <div
        class="confirm-content"
      >
        <i
          class="Icon material focusable big"
        >
          <span
            class="icon"
            data-icon-name="warning"
          >
            warning
          </span>
        </i>
         
        <p>
          Remove some-kind 
          <b>
            some-namespace/some-name
          </b>
           from 
          <b>
            some-context-name
          </b>
          ?
        </p>
      </div>
      <div
        class="confirm-buttons"
      >
        <button
          class="Button cancel plain"
          type="button"
        >
          Cancel
        </button>
        <button
          class="Button ok primary"
          data-testid="confirm"
          data-waiting="false"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube-object-menu given kube object without namespace when removing kube object, renders confirmation dialog without namespace 1`] = `
<body>
  <div>
    <div>
      <ul
        class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
        data-testid="menu-actions-for-kube-object-menu-for-some-uid"
        id="menu-actions-for-kube-object-menu-for-some-uid"
      >
        <li>
          Some menu item
        </li>
        <li
          class="MenuItem"
          data-testid="menu-action-delete-for-/foo"
          tabindex="0"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="delete"
            >
              delete
            </span>
          </i>
          <div>
            Delete
          </div>
          <span
            class="title"
          >
            Delete
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="Dialog flex center ConfirmDialog modal"
    data-testid="confirmation-dialog"
  >
    <div
      class="box"
    >
      <div
        class="confirm-content"
      >
        <i
          class="Icon material focusable big"
        >
          <span
            class="icon"
            data-icon-name="warning"
          >
            warning
          </span>
        </i>
         
        <p>
          Remove some-kind 
          <b>
            some-name
          </b>
           from 
          <b>
            some-context-name
          </b>
          ?
        </p>
      </div>
      <div
        class="confirm-buttons"
      >
        <button
          class="Button cancel plain"
          type="button"
        >
          Cancel
        </button>
        <button
          class="Button ok primary"
          data-testid="confirm"
          data-waiting="false"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube-object-menu given no kube object, renders 1`] = `
<body>
  <div>
    <ul
      class="Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
      data-testid="menu-actions-for-kube-object-menu-for-undefined"
      id="menu-actions-for-kube-object-menu-for-undefined"
    />
  </div>
</body>
`;
